zrušenie WEB UI zmena fungovania na stále

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,16 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="sk-SK">
 
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Demo</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width" />
     <base href="/" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <!-- toto je iba dočasne aby to bolo v preview videť-->
+    <!--
     <link rel="stylesheet" type="text/css" href="resources/static/style.css"/>
+    -->
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
@@ -23,31 +24,31 @@
                 <div class="hodina">
                     <div class="text1 name" data-name="0. Hodina">0. Hodina</div>
                     <div class="text2">
-                        <div class="time start" data-start="7:05">7:05</div>
+                        <div class="time start" data-start="07:05">07:05</div>
                         <div class="line"></div>
-                        <div class="time end" data-end="7:50">7:50</div>
+                        <div class="time end" data-end="07:50">07:50</div>
                     </div>
                 </div>
                 <div class="hodina">
                     <div class="text1 name" data-name="1. Hodina">1. Hodina</div>
                     <div class="text2">
-                        <div class="time start" data-start="7:55">7:55</div>
+                        <div class="time start" data-start="07:55">07:55</div>
                         <div class="line"></div>
-                        <div class="time end" data-end="8:40">8:40</div>
+                        <div class="time end" data-end="08:40">08:40</div>
                     </div>
                 </div>
                 <div class="hodina">
                     <div class="text1 name" data-name="2. Hodina">2. Hodina</div>
                     <div class="text2">
-                        <div class="time start" data-start="8:40">8:40</div>
+                        <div class="time start" data-start="08:40">08:40</div>
                         <div class="line"></div>
-                        <div class="time end" data-end="9:30">9:30</div>
+                        <div class="time end" data-end="09:30">09:30</div>
                     </div>
                 </div>
                 <div class="hodina">
                     <div class="text1 name" data-name="3. Hodina">3. Hodina</div>
                     <div class="text2">
-                        <div class="time start" data-start="9:40">9:40</div>
+                        <div class="time start" data-start="09:40">09:40</div>
                         <div class="line"></div>
                         <div class="time end" data-end="10:25">10:25</div>
                     </div>
